--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <main>
         <section>
             <div class="hero-image">
-                <img src="../assets/soundbath-landscape-large.png" alt="Soundbath with string instrument trio" class="d-none d-md-block"> 
-                <img src="../assets/soundbath-portrait.png" alt="Soundbath with string instrument trio" class="d-block d-md-none">      
+                <img src="assets/soundbath-landscape-large.png" alt="Soundbath with string instrument trio" class="d-none d-md-block"> 
+                <img src="assets/soundbath-portrait.png" alt="Soundbath with string instrument trio" class="d-block d-md-none">      
             </div>     
             </div>
             
