--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <nav class="py-1 px-4 navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#">ATTUNED</a>
+  <a class="navbar-brand" href="index.html">ATTUNED</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
